--- a/网页简历/aresume.html
+++ b/网页简历/aresume.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="icon" href="images/sun.jpg"/>
-    <title>WebSun</title>
+    <title>WebZhang</title>
     <link rel="stylesheet" type="text/css" href="aresume.css">
 </head>
 <body>
